--- a/online shopping/client/customer/src/index.css
+++ b/online shopping/client/customer/src/index.css
@@ -68,6 +68,7 @@ html {
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -225,8 +226,8 @@ body {
     font-size: 56.25;
   }
 }
-/* 320 */
-@media (max-width: 20em) {
+/* 360 */
+@media (max-width: 22.5em) {
   html {
     font-size: 50;
   }
